tsoa updated to v4 for middleware support, auth middleware added
